--- a/dsek-frontend/src/css/Footer.css
+++ b/dsek-frontend/src/css/Footer.css
@@ -1,43 +1,43 @@
 .Footer {
-    background: hsl(0, 0%, 80%);
-    color: hsl(0, 0%, 5%);
+    background: #ccc;
+    color: #0d0d0d;
     text-align: center;
     font-size: 14px;
 }
-  
+
 .Footer-Content {
     display: flex;
-    padding: 12px * 2;
+    padding: 24px;
     justify-content: center;
     margin: auto;
     max-width: 850px;
 }
-  
-.Footer-Content div {
+
+.Footer-Content > div {
     flex-grow: 1;
     flex-basis: 0;
 }
-  
+
 .Social-Icons {
-    background: hsl(0, 0%, 87%);
+    background: #dedede;
     padding-top: 12px;
-    padding-bottom: 12px/2;
+    padding-bottom: 6px;
 }
-  
+
 .Social-Icons a {
-    padding: 12px/2;
-    color: hsl(0, 0%, 15%);
+    padding: 6px;
+    color: #262626;
 }
-  
+
 .Social-Icons a:hover {
     color: #e5398d;
 }
-  
+
 .Social-Icons a svg {
     height: 48px;
     width: 48px;
 }
-  
+
 .Links {
     display: flex;
     flex-direction: column;
@@ -45,21 +45,21 @@
     text-align: right;
     font-size: 1.5em;
 }
-  
+
 .Links a {
-    color: hsl(0, 0%, 15%);
+    color: #262626;
 }
-  
+
 .Links a:hover {
     text-decoration: underline;
 }
-  
+
 .Logo {
     display: flex;
     align-items: center;
     text-align: left;
 }
-  
+
 .Logo img {
     width: 150px;
     height: 150px;
