NEW: Start work on side nav

--- a/dsek-frontend/src/css/Nav.css
+++ b/dsek-frontend/src/css/Nav.css
@@ -24,3 +24,26 @@
     font-size: 16px;
     line-height: 32px;
 }
+
+.SideNav {
+    width: 256px;
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.SideNavButton-Title {
+    font-size: 95%;
+    margin: 0;
+    height: 32px;
+    text-transform: uppercase;
+}
+
+.SideNavButton-Img {
+    background-color: green;
+    float: left;
+    width: 32px;
+    height: 32px;
+}
