--- a/dsek-frontend/src/css/Footer.css
+++ b/dsek-frontend/src/css/Footer.css
@@ -1,5 +1,4 @@
 .Footer {
-    position: fixed;
     bottom: 0;
     width: 100%;
     height: 156px;
@@ -7,6 +6,9 @@
     color: #555;
     text-align: center;
     font-size: 14px;
+
+    /*TODO: temporary solution*/
+    margin-top:calc(15% + 48px + 696px);
 }
 
 .Footer-Content {
