--- a/dsek-frontend/src/css/Nav.css
+++ b/dsek-frontend/src/css/Nav.css
@@ -8,8 +8,6 @@
     display: inline-block;
     background-color: white;
     width: 132px;
-    margin-left: 4px;
-    margin-right: 4px;
     height: 32px;
 }
 
@@ -116,4 +114,28 @@
     width: 266px;
     height: 32px;
     margin: auto;
+}
+
+.TEST {
+    width: 132px;
+}
+
+.DropdownNavButton {
+    width: 132px;
+    position: fixed;
+    display: inline-block;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+
+.TEST .Dropdown-Buttons {
+    visibility: hidden;
+    width: 100%;
+    height: 0;
+    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+}
+
+.TEST:hover .Dropdown-Buttons {
+    height: 100%;
+    visibility: visible;
 }
