--- a/dsek-frontend/src/css/Nav.css
+++ b/dsek-frontend/src/css/Nav.css
@@ -33,27 +33,36 @@
     width: 256px;
     background-color: #f8f8f8;
     border: 1px solid #ddd;
-    border-radius: 3px;
+    border-radius: 2px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.SideNavButton-Title {
-    font-size: 95%;
-    margin: 0;
-    height: 32px;
-    text-transform: uppercase;
+.SideNavButton {
+    height: 48px;
+    transition: all 0.6s;
+    opacity: 0;
+}
+
+.SideNavButton:hover {
+    height: 48px;
+    opacity: 1;
 }
 
 .SideNavButton-Img {
-    background-color: green;
+    width: 48px;
+    height: 48px;
+    margin-right: 12px;
+    border-radius: 2px;
+    content: "";
     float: left;
-    width: 32px;
-    height: 32px;
-    /*
-    opacity: 0;
-    transition: all 0.6s;
-    */
+}
+
+.SideNavButton-Text {
+    width: 100%;
+    height: 48px;
+    background-color: lightgray;
+    text-align: left;
 }
 
 .PageNavButton-Selected {
