--- a/dsek-frontend/src/css/Home.css
+++ b/dsek-frontend/src/css/Home.css
@@ -1,10 +1,9 @@
 .Home {
-    position: absolute;
+    position: relative;
     display: flex;
-    top: calc(15% + 48px);
+    margin-top: 128px;
     width: 100%;
-    height: 100%;
-    padding-top: 16px;
+    padding-bottom: 16px;
 }
 
 .Left {
