--- a/dsek-frontend/src/css/Nav.css
+++ b/dsek-frontend/src/css/Nav.css
@@ -41,12 +41,13 @@
 .SideNavButton {
     height: 48px;
     transition: all 0.6s;
-    opacity: 0;
+    background-color: white;
+
 }
 
 .SideNavButton:hover {
     height: 48px;
-    opacity: 1;
+    
 }
 
 .SideNavButton-Img {
@@ -59,6 +60,14 @@
 }
 
 .SideNavButton-Text {
+    width: 100%;
+    height: 48px;
+    line-height: 48px;
+    background-color: white;
+    text-align: left;
+}
+
+.SideNavButton-Text:hover {
     width: 100%;
     height: 48px;
     background-color: lightgray;
@@ -123,10 +132,6 @@
     width: 266px;
     height: 32px;
     margin: auto;
-}
-
-.TEST {
-    width: 132px;
 }
 
 .DropdownNavButton {
