--- a/dsek-frontend/src/css/PostPreview.css
+++ b/dsek-frontend/src/css/PostPreview.css
@@ -1,5 +1,6 @@
 .PostPreview {
     margin-bottom: 12px;
+    margin-top: 12px;
     width: 100%;
 }
 
@@ -20,10 +21,25 @@
     font-family: "Asap", Arial, sans-serif;
     font-weight: 300;
     padding-top: 6px;
+    font-size: 12px;
 }
 
 .PostPreview-Content {
     width: 100%;
     padding-bottom: 36px;
     overflow: hidden;
+    color: #555;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    text-align: left;
+}
+
+.PostPreview-Content p {
+    color: #555;
+    word-wrap: break-word;
+    line-height: 1.6875;
+}
+
+.PostPreview-Content p {
+    text-decoration: none;
 }
