NEW: Adjust Alumni page to expectations

--- a/dsek-frontend/src/css/committee/Alumni.css
+++ b/dsek-frontend/src/css/committee/Alumni.css
@@ -1,7 +1,7 @@
 .Alumni {
     width: 80%;
     margin: auto;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Gill Sans Nova Condensed UltraBold;
 }
 
 .Alumni img {
