--- a/dsek-frontend/src/css/Nav.css
+++ b/dsek-frontend/src/css/Nav.css
@@ -1,13 +1,18 @@
-.Menu{
+.Menu {
     width: 100%;
     height: 32px;
+    justify-content: center;
     min-width: 1000px;
+    display: grid;
+    grid-template-columns: 132px 132px 132px 132px 132px 132px;
+    /* grid-template-columns: fit-content(132px) fit-content(132px) fit-content(132px) fit-content(132px) fit-content(132px) fit-content(132px) fit-content(132px); */
 }
 
 .NavButton {
     display: inline-block;
     background-color: white;
     width: 132px;
+    /* width: fit-content; */
     height: 32px;
 }
 
@@ -134,21 +139,14 @@
     margin: auto;
 }
 
-.DropdownNavButton {
-    width: 132px;
-    position: fixed;
-    display: inline-block;
-    margin-left: 4px;
-    margin-right: 4px;
-}
-
-.TEST .Dropdown-Buttons {
+.DropdownNavButtonComponent .Dropdown-Buttons {
     visibility: hidden;
     height: 0;
     box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
 }
 
-.TEST:hover .Dropdown-Buttons {
+.DropdownNavButtonComponent:hover .Dropdown-Buttons {
     height: 100%;
     visibility: visible;
 }
+
