--- a/dsek-frontend/src/css/Footer.css
+++ b/dsek-frontend/src/css/Footer.css
@@ -1,3 +1,4 @@
+
 .Footer {
     position: relative;
 
@@ -10,11 +11,24 @@
     color: #555;
     text-align: center;
     font-size: 14px;
+
 }
 
 .Footer-Content {
     padding: 24px;
 }
+
+.Footer-Content a{
+    text-decoration: none;
+    color: #555;
+}
+
+.Icons{
+    text-decoration: none;
+    color: #555;
+    font-size: 30px
+}
+
 
 .Colors {
     position: absolute;
