--- a/dsek-frontend/src/css/Nav.css
+++ b/dsek-frontend/src/css/Nav.css
@@ -2,18 +2,27 @@
     width: 100%;
     height: 32px;
     justify-content: center;
-    min-width: 1000px;
+    min-width: fit-content;
     display: grid;
-    grid-template-columns: 132px 132px 132px 132px 132px 132px;
-    /* grid-template-columns: fit-content(132px) fit-content(132px) fit-content(132px) fit-content(132px) fit-content(132px) fit-content(132px) fit-content(132px); */
+    grid-template-columns: repeat(6, 132px);
+    /* grid-template-columns: repeat(6, 140px); */
+    /* grid-template-columns: repeat(6, fit-content); */
 }
 
 .NavButton {
     display: inline-block;
     background-color: white;
-    width: 132px;
-    /* width: fit-content; */
     height: 32px;
+    width: 132px;
+}
+
+.Dropdown {
+    display: flex;
+    justify-content: center;
+    width: fit-content;
+    align-items: center;
+    padding: 0 10px 0 10px;
+    /* box-shadow: 0 10px 5px 1px black; */
 }
 
 .NavButton:hover {
@@ -50,9 +59,12 @@
 
 }
 
-.SideNavButton:hover {
+.SideNavButton:hover{
     height: 48px;
-    
+} 
+
+.SideNavButton:hover .SideNavButton-Img{
+    background-color: #305fb9;
 }
 
 .SideNavButton-Img {
@@ -64,6 +76,12 @@
     float: left;
 }
 
+.SideNavButton-Img:hover{
+    background-color: #305fb9; 
+    /*hjääälp jag vill använda sidenavbuttons variabel 
+    som just nu heter col*/
+}
+
 .SideNavButton-Text {
     width: 100%;
     height: 48px;
@@ -72,10 +90,10 @@
     text-align: left;
 }
 
-.SideNavButton-Text:hover {
+.SideNavButton-Text:hover{
     width: 100%;
     height: 48px;
-    background-color: lightgray;
+    background-color:  lightgray;
     text-align: left;
 }
 
@@ -140,13 +158,14 @@
 }
 
 .DropdownNavButtonComponent .Dropdown-Buttons {
-    visibility: hidden;
+    display : none;
     height: 0;
     box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
 }
 
 .DropdownNavButtonComponent:hover .Dropdown-Buttons {
     height: 100%;
-    visibility: visible;
+    display: block;
 }
+
 
