--- a/dsek-frontend/src/css/PostPreview.css
+++ b/dsek-frontend/src/css/PostPreview.css
@@ -8,8 +8,15 @@
     font-family: "Asap", Arial, sans-serif;
     margin: 0;
     line-height: 1.2;
+    font-weight: 400;;
     border-bottom: 2px solid #333;
     padding-bottom: 6px;
+    text-align: left;
+}
+
+.PostPreview-Title a {
+    text-decoration: none;
+    color: #333;
 }
 
 .PostPreview-Date {
