--- a/dsek-frontend/src/css/Nav.css
+++ b/dsek-frontend/src/css/Nav.css
@@ -4,13 +4,15 @@
     justify-content: center;
     min-width: fit-content;
     display: grid;
-    grid-template-columns: repeat(6, 132px);
+    grid-template-columns: 109px 90px 100px repeat(3, auto);
+    column-gap: 5px;
 }
 
 .NavButton {
-    display: inline-block;
     background-color: white;
     height: 32px;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
     width: 132px;
 }
 
@@ -24,18 +26,28 @@
 
 .DropdownNavButton {
     text-align: left;
+    border-radius: 0;
 }
 
 .dropdown-elements {
     box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+    width: 132px;
+}
+
+.RegNavButton {
+    cursor: pointer;
+    width: fit-content;
 }
 
 .NavButton:hover {
-    cursor: pointer;
     background-color: #E5398D;
 }
 
-.NavButton:hover a {
+.DropdownButton:hover {
+    cursor: default;
+}
+
+.NavButton:hover a, .NavButton:hover p {
     color: #F7E623;
 }
 
