--- a/dsek-frontend/src/css/Footer.css
+++ b/dsek-frontend/src/css/Footer.css
@@ -1,12 +1,8 @@
 
 .Footer {
     position: relative;
-
-    /*TODO: temporary fix*/
-    /*bottom: -512px;*/
     bottom: 0;
     width: 100%;
-    height: 156px;
     background: #f8f8f8;
     color: #555;
     text-align: center;
@@ -23,10 +19,23 @@
     color: #555;
 }
 
-.Icons{
+.Footer-Info > p {
+    /* border: 1px solid red; */
+    margin: 0;
+}
+
+p.Icons {  
+    margin-top: 1%;
+}
+
+a.Icons {
     text-decoration: none;
     color: #555;
-    font-size: 30px
+    font-size: 30px;
+}
+
+a.Icons:hover {
+    color: #e5398d;
 }
 
 
