Started work on Page.js dependent pages and made som fixes to the Layout
Also added Bug and TODO tracking in README.md

--- a/dsek-frontend/src/css/Footer.css
+++ b/dsek-frontend/src/css/Footer.css
@@ -1,13 +1,12 @@
 
 .Footer {
     position: relative;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
     background: #f8f8f8;
     color: #555;
     text-align: center;
     font-size: 14px;
-
 }
 
 .Footer-Content {
