--- a/dsek-frontend/src/css/Nav.css
+++ b/dsek-frontend/src/css/Nav.css
@@ -276,5 +276,22 @@
         color: #fff;
         transition: color 0.15s linear;
     }
+
+    .narrow-nav {
+        display: block;
+    }
+
+    .wide-nav {
+        display: none;
+    }
 }
 
+@media only screen and (min-width: 850px) {
+    .narrow-nav {
+        display: none;
+    }
+
+    .wide-nav {
+        display: block;
+    }
+}
