--- a/dsek-frontend/src/css/Nav.css
+++ b/dsek-frontend/src/css/Nav.css
@@ -78,7 +78,6 @@
 }
 
 .SideNav {
-    width: 256px;
     background-color: #f8f8f8;
     border: 1px solid #ddd;
     border-radius: 2px;
@@ -136,7 +135,7 @@
     font-size: large;
 }
 
-.SideNavButton>a {
+.SideNavButton > a {
     text-decoration: none;
     color: black;
 }
@@ -207,7 +206,7 @@
 }
 
 .PageNav {
-    width: 266px;
+    width: 466px;
     height: 32px;
     margin: auto;
 }
@@ -257,6 +256,7 @@
 
     .dropdown-elements {
         width: 100%;
+        z-index: 2;
     }
 
     .Dropdown {
