api key stuff and calendar appearance fixes (language, height...)

--- a/dsek-frontend/src/css/Widget.css
+++ b/dsek-frontend/src/css/Widget.css
@@ -22,6 +22,10 @@
     padding: 16px;
 }
 
+.fc .fc-list-empty-cushion {
+    text-align: center;
+}
+
 @media only screen and (max-width: 900px) {
     .Widget {
         width: 95%;
