--- a/dsek-frontend/src/css/Footer.css
+++ b/dsek-frontend/src/css/Footer.css
@@ -1,4 +1,3 @@
-
 .Footer {
     position: relative;
     bottom: 0px;
@@ -13,16 +12,17 @@
     padding: 24px;
 }
 
-.Footer-Content a{
+.Footer-Content a {
     text-decoration: none;
     color: #555;
 }
 
-.Footer-Info > p {
+.Footer-Info>p {
     margin: 0;
+    text-align: center;
 }
 
-p.Icons {  
+p.Icons {
     margin-top: 1%;
 }
 
@@ -38,7 +38,6 @@ a.Icons:hover {
 
 
 .Colors {
-    position: absolute;
     width: 100%;
     height: 6px;
     display: flex;
@@ -81,4 +80,3 @@ a.Icons:hover {
         padding-top: 16px;
     }
 }
-
