--- a/dsek-frontend/src/css/Widget.css
+++ b/dsek-frontend/src/css/Widget.css
@@ -15,6 +15,7 @@
     border-bottom: 1px solid #ddd;
     padding: 12px;
     text-transform: uppercase;
+    background-color: hsla(0, 0%, 82%, .3);
 }
 
 .Widget-Img {
@@ -22,8 +23,21 @@
     padding: 16px;
 }
 
+.fc .fc-list-empty-cushion {
+    text-align: center;
+}
+
+.CalendarWidget {
+    margin: 0.7em auto auto auto;
+}
+
 @media only screen and (max-width: 900px) {
     .Widget {
         width: 95%;
+    }
+
+    .CalendarWidget {
+        max-width: 95%;
+        /* margin: 0.7em auto auto auto; */
     }
 }
