--- a/dsek-frontend/src/css/Widget.css
+++ b/dsek-frontend/src/css/Widget.css
@@ -29,6 +29,8 @@
 
 .CalendarWidget {
     margin: 0.7em auto auto auto;
+    overflow: scroll;
+    max-width: 100%;
 }
 
 @media only screen and (max-width: 900px) {
