--- a/dsek-frontend/src/App.css
+++ b/dsek-frontend/src/App.css
@@ -1,4 +1,6 @@
 .App {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     text-align: center;
-    min-height: calc(100vh - 288px);
 }
