--- a/dsek-frontend/src/css/Nav.css
+++ b/dsek-frontend/src/css/Nav.css
@@ -1,78 +1,143 @@
-.Menu {
-    width: 100%;
-    height: 32px;
-    justify-content: center;
-    min-width: fit-content;
-    display: grid;
-    grid-template-columns: 108px 89px 112px repeat(3, auto);
-    column-gap: 5px;
+@media only screen and (max-width: 900px) {
+    .site-nav {
+        display: grid;
+        grid-template-columns: 100%;
+        justify-content: left;
+
+        width: 100%;
+        height: 32px;
+    }
+
+    .nav-button {
+        border-top: 0.5px solid #3b3b3b;
+        padding: 3px 10px 3px 10px;
+        width: 100%;
+        line-height: 32px;
+
+        background-color: #0a0a0a;
+        color: #fff;
+        text-align: left;
+    }
+
+    .nav-button:hover,
+    .narrow-dropdown .dropdown-nav-button:hover {
+        color: #F7E623;
+    }
+
+    .wide-dropdown {
+        display: none;
+    }
 }
 
-.NavButton {
-    background-color: white;
-    height: 32px;
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
-    width: 100%;
-    padding: 0 10px 0 10px;
+@media only screen and (min-width: 900px) {
+    .site-nav {
+        display: grid;
+        grid-template-columns: 108px 89px 112px repeat(3, auto); /* TODO: find a way not to need specific values */
+        column-gap: 5px;
+        justify-content: center;
+    
+        width: 100%;
+        height: 32px;
+        min-width: fit-content;
+    }
+
+    .nav-button {
+        padding: 0 10px 0 10px;
+        width: fit-content; /* TODO: check if needed */
+        height: 32px;
+        line-height: 32px;;
+        border-radius: 2px 2px 0 0;
+
+        background-color: #fff;
+        color: #000;
+        transition: 0.4s; /* NOTE: longer than original site, why? */
+    }
+
+    .wide-dropdown:hover .nav-button,
+    .wide-dropdown .dropdown-nav-button:hover,
+    .nav-button:hover {
+        background-color: #E5398D;
+        color: #F7E623;
+    }
+
+    .narrow-dropdown {
+        display: none;
+    }
 }
 
-.Dropdown {
-    display: flex;
-    justify-content: center;
-    width: fit-content;
-    align-items: center;
+.reg-nav-button {
+    cursor: pointer;
+}
+
+.wide-dropdown {
+    position: relative;
+}
+
+.dropdown-button {
+    cursor: default;
     white-space: nowrap;
 }
 
-.DropdownNavButton {
-    text-align: left;
-    border-radius: 0;
-    background-color: white;
-    padding: 5px 5px 5px 5px;
+.wide-dropdown .dropdown-items {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    background-color: #fff;
 }
 
-.DropdownNavLink {
-    text-decoration: none;
-    color: white;
-}
-
-.DropdownNavButton:hover {
-    transition: 00.4s;
-    color: #F7E623;
-    background-color: #E5398D;
-}
-
-.dropdown-elements {
-    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+.wide-dropdown:hover .dropdown-items {
+    display: block;
     width: 132px;
+    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
 }
 
-.RegNavButton {
+.wide-dropdown .dropdown-nav-button {
+    display: block;
+    padding: 5px 5px 5px 5px;
+    color: #000;
+    text-align: left;
+    text-decoration: none;
+    transition: 0.4s; /* NOTE: longer than original site, why? */
+}
+
+.hamburger {
+    position: fixed;
+    right: 0;
+    margin-top: 10px;
+    margin: -30px 12px auto auto; /* varför syns den på vissa datorer men inte andra? */
+    color: #fff;
+}
+
+.hamburger:hover {
     cursor: pointer;
-    width: fit-content;
-}
-
-.NavButton:hover {
-    background-color: #E5398D;
-    transition: 00.4s;
-}
-
-.DropdownButton:hover {
-    cursor: default;
-}
-
-.NavButton:hover a,
-.NavButton:hover p,
-.NavButton:hover {
     color: #F7E623;
-    text-decoration: none;
 }
 
-a.NavButton {
+.narrow-dropdown .dropdown-nav-button {
+    display: block;
+    border-top: 0.5px solid #3b3b3b;
+    padding: 5px 5px 5px 35px;
+    width: 100%;
     text-decoration: none;
-    font-size: 16px;
-    line-height: 32px;
+    background-color: #121212;
+    color: #fff;
+    text-align: left;
+    transition: 0.4s; /* NOTE: longer than original site, why? */
+}
+
+.narrow-dropdown .dropdown-items {
+    width: 100%;
+    z-index: 2;
+}
+
+/********************************/
+/* Side navigation & pagination */
+
+@media only screen and (max-width: 900px) {
+    .SideNav {
+        width: 95%;
+    }
 }
 
 .SideNav {
@@ -207,111 +272,4 @@ a.NavButton {
     width: 466px;
     height: 32px;
     margin: auto;
-}
-
-.hamburger {
-    position: fixed;
-    right: 0;
-    margin-top: 10px;
-    margin: -30px 12px auto auto; /* varför syns den på vissa datorer men inte andra? */
-    color: white;
-}
-
-.hamburger:hover {
-    cursor: pointer;
-    color: #F7E623;
-}
-
-@media only screen and (max-width: 900px) {
-    .SideNav {
-        width: 95%;
-    }
-
-    .Menu {
-        width: 100%;
-        height: 32px;
-        justify-content: left;
-        display: grid;
-        grid-template-columns: 100%;
-    }
-
-    .NavButton {
-        border-top: 0.5px solid #3b3b3b;
-        width: 100%;
-        color: white;
-        text-align: left;
-        background-color: #0a0a0a;
-        padding: 3px 10px 3px 10px;
-    }
-
-    .DropdownNavButton {
-        background-color: #121212;
-        width: 100%;
-        border-top: 0.5px solid #3b3b3b;
-        padding: 5px 5px 5px 35px;
-        text-decoration: none;
-    }
-
-    .dropdown-elements {
-        width: 100%;
-        z-index: 2;
-    }
-
-    .Dropdown {
-        display: flex;
-        justify-content: left;
-        cursor: pointer;
-    }
-
-    .RegNavButton {
-        cursor: pointer;
-    }
-
-    .NavButton:hover {
-        background-color: #0a0a0a;
-        /* todo: better way? */
-    }
-
-    .DropdownNavButton:hover {
-        cursor: pointer;
-        background-color: #121212;
-    }
-
-    .NavButton:hover {
-        color: #F7E623;
-    }
-
-    a.NavButton {
-        text-decoration: none;
-        font-size: 16px;
-        line-height: 32px;
-        color: #fff;
-        transition: color 0.15s linear;
-    }
-
-    .narrow-nav {
-        display: block;
-    }
-
-    .wide-nav {
-        display: none;
-    }
-}
-
-@media only screen and (min-width: 900px) {
-    .narrow-nav {
-        display: none;
-    }
-
-    .wide-nav {
-        display: block;
-    }
-
-    .DropdownNavLink, a.NavButton {
-        color: #000;
-    }
-
-    a.NavButton > nav {
-        /* margin: auto; */
-    }
 }
