--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -131,8 +131,48 @@
     z-index: 2;
 }
 
-/********************************/
-/* Side navigation & pagination */
+/**************/
+/* Pagination */
+
+.page-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 3px;
+    width: 100%;
+}
+
+.page-nav-button {
+    width: 32px;
+    height: 32px;
+
+    background: #f8f8f8;
+    color: #000;
+    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+    transition: box-shadow 0.3s ease;
+
+    font-family: "Asap", Arial, sans-serif;
+}
+
+.page-nav-button:hover {
+    border-bottom: #E5398D 6px solid;
+    cursor: pointer;
+}
+
+.page-nav-button.selected {
+    border-bottom: #305fb9 6px solid;
+    cursor: default;
+}
+
+.page-nav-button:disabled {
+    border: 0;
+    background: #e7e7e7;
+    box-shadow: none;
+    cursor: default;
+}
+
+/*******************/
+/* Side navigation */
 
 @media only screen and (max-width: 900px) {
     .SideNav {
@@ -212,64 +252,4 @@
     height: 48px;
     background-color: lightgray;
     text-align: left;
-}
-
-.PageNavButton-Selected {
-    font-family: "Asap", Arial, sans-serif;
-    margin: 0 3px;
-    background: #f8f8f8;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 32px;
-    width: 32px;
-    text-decoration: none;
-    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
-    transition: box-shadow 0.3s ease;
-    cursor: default;
-    border-bottom: #305fb9 6px solid;
-    float: left;
-}
-
-.PageNavButton-Disabled {
-    font-family: "Asap", Arial, sans-serif;
-    margin: 0 3px;
-    background: #e7e7e7;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 32px;
-    width: 32px;
-    text-decoration: none;
-    transition: box-shadow 0.3s ease;
-    cursor: default;
-    float: left;
-}
-
-.PageNavButton {
-    font-family: "Asap", Arial, sans-serif;
-    margin: 0 3px;
-    background: #f8f8f8;
-    color: #000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 32px;
-    width: 32px;
-    text-decoration: none;
-    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
-    transition: box-shadow 0.3s ease;
-    cursor: default;
-    float: left;
-}
-
-.PageNavButton:hover {
-    cursor: pointer;
-    border-bottom: #E5398D 6px solid;
-}
-
-.PageNav {
-    width: 466px;
-    height: 32px;
-    margin: auto;
 }
