--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -31,33 +31,29 @@
 
 @media only screen and (min-width: 900px) {
     .site-nav {
-        display: grid;
-        grid-template-columns: 108px 89px 112px repeat(3, auto); /* TODO: find a way not to need specific values */
-        column-gap: 5px;
+        display: flex;
         justify-content: center;
-    
         width: 100%;
-        height: 32px;
+        height: 48px;
         min-width: fit-content;
     }
 
     .nav-button {
-        padding: 0 10px 0 10px;
-        width: fit-content; /* TODO: check if needed */
-        height: 32px;
-        line-height: 32px;;
-        border-radius: 2px 2px 0 0;
-
-        background-color: #fff;
-        color: #000;
-        transition: 0.4s; /* NOTE: longer than original site, why? */
+        margin: 0 6px 0 6px;
+        padding: 0 14px 0 14px;
+        font-size: 32px;
+        width: fit-content;
+        height: 48px;
+        line-height: 48px;
+        color: #fff;
+        transition: 0.4s;
     }
 
     .wide-dropdown:hover .nav-button,
     .wide-dropdown .dropdown-nav-button:hover,
     .nav-button:hover {
-        background-color: #E5398D;
-        color: #F7E623;
+        background-color: #0008;
+        color: #E5398D;
     }
 
     .narrow-dropdown {
@@ -98,14 +94,16 @@
     color: #000;
     text-align: left;
     text-decoration: none;
-    transition: 0.4s; /* NOTE: longer than original site, why? */
+    transition: 0.4s;
+    /* NOTE: longer than original site, why? */
 }
 
 .hamburger {
     position: fixed;
     right: 0;
     margin-top: 10px;
-    margin: -30px 12px auto auto; /* varför syns den på vissa datorer men inte andra? */
+    margin: -30px 12px auto auto;
+    /* varför syns den på vissa datorer men inte andra? */
     color: #fff;
 }
 
@@ -123,7 +121,8 @@
     background-color: #121212;
     color: #fff;
     text-align: left;
-    transition: 0.4s; /* NOTE: longer than original site, why? */
+    transition: 0.4s;
+    /* NOTE: longer than original site, why? */
 }
 
 .narrow-dropdown .dropdown-items {
@@ -238,7 +237,7 @@
     font-size: large;
 }
 
-.SideNavButton > a {
+.SideNavButton>a {
     text-decoration: none;
     color: black;
 }
