--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -15,7 +15,7 @@
         line-height: 32px;
 
         background-color: #0a0a0a;
-        color: #fff;
+        color: #000;
         text-align: left;
     }
 
@@ -41,11 +41,11 @@
     .nav-button {
         margin: 0 6px 0 6px;
         padding: 0 14px 0 14px;
-        font-size: 32px;
+        font-size: 24px;
         width: fit-content;
-        height: 48px;
-        line-height: 48px;
-        color: #fff;
+        height: 32px;
+        line-height: 32px;
+        color: #000;
         transition: 0.4s;
     }
 
