--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -4,7 +4,7 @@
     position: fixed;
     width: 100%;
     z-index: 500;
-    background-image: url("../../public/bg.jpg");
+    /* background-image: url("../../public/bg.jpg"); */
     background-size: cover;
 }
 
@@ -22,11 +22,19 @@
     .narrow-header {
         display: none;
     }
+
 }
 
 @media only screen and (max-width: 900px) {
     .wide-header {
         display: none;
+    }
+
+    .logo {
+        border-left: 40px solid black;
+        border-right: 40px solid black;
+        background-color: black;
+        /* border-radius: 5vh; */
     }
 }
 
@@ -38,8 +46,6 @@
     height: 150px;
     transition: 0.3s;
     font-size: 0;
-    margin-top: 50vh;
-    margin-bottom: 30vh;
     /* Needed to keep <a> confined to the bounds of .logo-container */
 }
 
@@ -47,9 +53,11 @@
     height: 0;
     margin-top: 0px;
     margin-bottom: 32px;
+    opacity: 0;
 }
 
 .logo {
     height: 100%;
     object-fit: contain;
+
 }
