Kan nu hämta inlägg från Strapi. Behöver vidare utveckling

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -2,7 +2,7 @@
     position: relative;
     flex-grow: 1;
     display: flex;
-    margin-top: 128px;
+    padding-top: 16px;
     width: 100%;
     padding-bottom: 16px;
 }
